# aero

./: CMakeLists.txt
.github/workflows/: drivers-win7.yml
ci/: build-drivers.ps1  install-wdk.ps1
ci/lib/: Toolchain.psm1
drivers/aerogpu/: aerogpu_kmd.vcxproj
drivers/aerogpu/umd/d3d10_11/: aerogpu_d3d10_11.vcxproj
drivers/aerogpu/umd/d3d10_11/src/: aerogpu_d3d10_11_internal.h
drivers/aerogpu/umd/d3d10_11/tests/: CMakeLists.txt
drivers/aerogpu/umd/d3d9/include/: aerogpu_d3d9_umd.h
drivers/aerogpu/umd/d3d9/src/: aerogpu_d3d9_caps.cpp  aerogpu_d3d9_driver.cpp  aerogpu_wddm_context.cpp  aerogpu_wddm_context.h
drivers/aerogpu/umd/d3d9/tests/: cmd_stream_writer_tests.cpp
drivers/windows/virtio/common/tests/: virtqueue_split_stress_test.c
drivers/windows/virtio/kmdf/tests/virtio_pci_interrupts_host/include/: ntddk.h
drivers/windows7/virtio-input/tests/: CMakeLists.txt
drivers/windows7/virtio-snd/tests/: ntddk.h
drivers/windows7/virtio/common/tests/wdk_stubs/: ntddk.h  virtio_pci_modern_mmio_sim.c  wdk_stubs.c
